# Barc

./: .gitignore  BUILD.bazel  Barc.xctestplan  LICENSE  MODULE.bazel  Package.resolved  Package.swift  Project.swift  constants.bzl
App/Mobile/: BUILD.bazel  Info.plist  StoreKit.storekit
App/Mobile/Resources/: LaunchScreen.storyboard
App/Mobile/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
App/Mobile/Sources/: AppShortcutsPackage.swift  BarcMobileApp.swift  DataScanner.swift  RootView.swift
BarcodeGenerator/: BUILD.bazel
BarcodeGenerator/Sources/: Barcode.swift  EANDigit.swift  EANSection.swift
BarcodeGenerator/Sources/EAN/: EANBarcode.swift
BarcodeGenerator/Sources/QR/: QRBarcode.swift  QRCorrectionLevel.swift  QRGenerationError.swift  QRPayload.swift
BarcodeGenerator/Tests/Sources/: BarcodeTests.swift  EANDigitTests.swift  EANValueTests.swift
ErrorHandling/: BUILD.bazel
ErrorHandling/Sources/: FatalError.swift  Log.swift
ErrorHandling/Tests/Sources/: FatalErrorTests.swift
ManualEntry/: BUILD.bazel
ManualEntry/Sources/: ManualEntry.swift  ManualEntryForm.swift
Modules/BarcodeDetails/Sources/: BarcodeDetails.swift  CancelButton.swift  DoneButton.swift  EditButton.swift  ErrorAlertViewModifier.swift
Modules/BarcodeEdit/Sources/: BarcodeDatePicker.swift  BarcodeEdit.swift  BarcodeEditBackground.swift  CancelButton.swift  DeleteButton.swift  DoneButton.swift
Modules/BarcodeGenerator/Sources/: CodeBackground.swift  CodeRenderer.swift  IntExtensions.swift  SingleDimensionCodeRenderer.swift
Modules/BarcodeView/Sources/: BarcodeView.swift  BarcodeViewBackground.swift  FormExample.swift  PreferenceReader.swift
Modules/Barcodes/Sources/: BarcodeModel.swift  BarcodeModelType.swift  Code.swift  CodeValue.swift  ConversionError.swift  EANCodeValue.swift  EANPayloadParser.swift  Location.swift  QRBarcodeModel.swift  QRCodeValue.swift  Trigger.swift
Modules/Barcodes/Tests/: EANPayloadParserTests.swift
Modules/DesignSystem/Sources/: Colors.swift  EnvironmentValues.swift
Modules/ErrorHandling/Doubles/: StubErrorHandler.swift
Modules/ErrorHandling/Sources/: DefaultHandler.swift  ErrorEventFactory.swift  ErrorHandler.swift  ErrorHandling.swift  FatalError.swift  StringExtensions.swift
Modules/ImageReader/Sources/: BarcodeResultMapper.swift  ImageReader.swift  ImageReaderError.swift
Modules/ImageReader/TestResources/: meatybites.heic
Modules/ImageReader/Tests/: BarcodeModelExtensions.swift  Constants.swift  ImageReaderTests.swift
Modules/Location/Sources/: CoreLocationProvider.swift  LocationProvider.swift  LocationProviderEnvironmentKey.swift  LocationProviderError.swift  PlacemarkMapper.swift  PlacemarkMapperError.swift  PreviewLocationProvider.swift
Modules/LocationEditor/Resources/: Localizable.strings
Modules/LocationEditor/Sources/: CancelButton.swift  DoneButton.swift  Location.swift  LocationEditor.swift  LocationEditorToolbar.swift  LocationListItem.swift  LocationListItemAddressText.swift  LocationListItemNameText.swift
Modules/Logging/Doubles/: SpyLogger.swift
Modules/Logging/Sources/: Event.swift  Logging.swift  TelemetryLogger.swift
Modules/Logging/Tests/: TelemetryLoggerTests.swift
Modules/ManualEntry/Sources/: CancelButton.swift  ManualEntry.swift  ManualEntryForm.swift  ManualEntryFormPicker.swift  PartialCode.swift  SaveButton.swift
Modules/Menu/Sources/: Menu.swift  MenuList.swift  MenuView.swift
Modules/Navigation/Sources/: Cashable.swift  Navigator.swift  Route.swift
Modules/Navigation/Tests/: RouteTests.swift
Modules/Onboarding/Sources/: OnboardingView.swift
Modules/Paywall/Sources/: PaywallCloseButton.swift  PaywallHeader.swift  PaywallItem.swift  PaywallText.swift  PaywallView.swift  PurchaseAlertViewModifier.swift  PurchaseMarketingCloseButton.swift  PurchaseMarketingHeader.swift  PurchaseMarketingHostingController.swift  PurchaseMarketingItem.swift  PurchaseMarketingText.swift  PurchaseMarketingView.swift
Modules/Permission/Sources/: CoreLocationPermissionRequester.swift  LocationAuthorizationStatus.swift  LocationAuthorizationStatusMapper.swift  LocationPermissionRequester.swift  Permission.swift  PermissionStatus.swift
Modules/Permission/Tests/: PermissionTests.swift
Modules/Persistence/Doubles/: StubBarcodeRepository.swift
Modules/Persistence/Sources/: Persistence.swift
Modules/Purchasing/Doubles/: StubPurchaseRepository.swift
Modules/Purchasing/Sources/: PaywallView.swift  PreviewPurchaseRepository.swift  PurchaseAlertViewModifier.swift  PurchaseOption.swift  PurchaseOptionMapper.swift  PurchaseRepository.swift  PurchaseRepositoryEnvironmentKey.swift  Purchasing.swift  RevenueCatPurchaseRepository.swift
Modules/Purchasing/Tests/: PurchasingTests.swift
Modules/ReviewRequest/Sources/: RequestReviewAction.swift  ReviewRequester.swift
Modules/ReviewRequest/Tests/: ReviewRequesterTests.swift
Modules/Root/Sources/: DeepLinkHandler.swift  ManualEntryToolbarItem.swift  RootView.swift  RouteMapper.swift  ScannerToolbarItem.swift  SettingsButton.swift
Modules/Root/Tests/: RootTests.swift
Modules/Scanner/Sources/: BarcodeScannerFactory.swift  DataScanner.swift  ErrorAlertViewModifier.swift  NavigationBarScrim.swift  ScanResult.swift  Scanner.swift  ScannerContainer.swift  ScannerContainerDismissButton.swift  ScannerFactory.swift  ScannerViewController.swift
Modules/Scanner/Tests/: DataScannerTests.swift  ScannerTests.swift
Persistence/: BUILD.bazel
Persistence/Sources/Models/: EANBarcodeModel.swift  QRBarcodeModel.swift
Persistence/Sources/Repository/: BarcodeRepository.swift  FileBarcodeRepository.swift  PreviewBarcodeRepository.swift
Products/CodeScanner/: CodeScanner.entitlements  Info.plist
Products/Share/: Info.plist  Share.entitlements
Products/Share/Sources/: ShareView.swift  (+3 more)
Products/Watch/: Info.plist  Watch.entitlements
Products/Widgets/: Info.plist  Widgets.entitlements
Shared/: BUILD.bazel
Tuist/ProjectDescriptionHelpers/: SDK.swift  Shared.swift  TargetExtensions.swift  TestHelpers.swift
fastlane/: Appfile  Fastfile  Matchfile  README.md
(+337 files in other folders)
