load(
    "//:constants.bzl",
    "MINIMUM_IOS_VERSION",
)

load(
    "@rules_apple//apple:ios.bzl",
    "ios_application",
)

load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "xcodeproj",
    "top_level_target",
)

ios_application(
    name = "MobileApp",
    bundle_id = "com.cocoatype.Barc",
    families = ["iphone", "ipad"],
    infoplists = ["//App/Mobile:Info.plist"],
    minimum_os_version = MINIMUM_IOS_VERSION,
    deps = [
        "//App/Mobile",
    ],
    frameworks = [
        "//BarcodeGenerator:BarcodeGenerator.iOS",
    ],
    visibility = ["//visibility:public"],
)

xcodeproj(
    name = "xcodeproj",
    project_name = "Barc",
    tags = ["manual"],
    top_level_targets = [
        top_level_target(":MobileApp", target_environments = ["simulator"]),
    ],
)
