load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "xcodeproj",
    "top_level_target",
    "xcode_provisioning_profile",
)

xcodeproj(
    name = "xcodeproj",
    project_name = "Barc",
    tags = ["manual"],
    top_level_targets = [
        top_level_target("//App/Mobile", target_environments = ["device", "simulator"]),
    ],
)

test_suite(
    name = "UnitTests",
    tests = [
        "//BarcodeGenerator:Tests",
        "//ErrorHandling:Tests",
    ],
    visibility = ["//visibility:public"],
)
