load(
    "//:constants.bzl",
    "MINIMUM_IOS_VERSION",
)

load(
    "@rules_apple//apple:ios.bzl",
    "ios_framework",
    "ios_unit_test",
)

load(
    "@rules_swift//swift:swift.bzl",
    "swift_library",
)

swift_library(
    name = "BarcodeGenerator",
    module_name = "BarcodeGenerator",
    srcs = glob([
        "Sources/**/*.swift",
    ]),
    deps = [
        "//ErrorHandling",
    ],
    visibility = ["//visibility:public"],
)

ios_framework(
    name = "BarcodeGenerator.iOS",
    deps = [
        ":BarcodeGenerator",
    ],
    frameworks = [
        "//ErrorHandling:ErrorHandling.iOS",
    ],
    bundle_id = "com.cocoatype.Barc.BarcodeGenerator",
    families = ["iphone", "ipad"],
    infoplists = ["//Shared:Info.plist"],
    minimum_os_version = MINIMUM_IOS_VERSION,
    visibility = ["//visibility:public"],
)

swift_library(
    name = "BarcodeGeneratorTests",
    testonly = True,
    srcs = glob([
        "Tests/Sources/**/*.swift",
    ]),
    deps = [
        ":BarcodeGenerator",
    ],
    visibility = ["//visibility:public"],
)

ios_unit_test(
    name = "Tests",
    minimum_os_version = MINIMUM_IOS_VERSION,
    deps = [
        ":BarcodeGeneratorTests",
    ],
    runner = "@rules_apple//apple/testing/default_runner:ios_xctestrun_random_runner",
    visibility = ["//visibility:public"],
)
