load(
    "//:constants.bzl",
    "MINIMUM_IOS_VERSION",
)

load(
    "@rules_apple//apple:ios.bzl",
    "ios_framework",
    "ios_unit_test",
)

load(
    "@rules_swift//swift:swift.bzl",
    "swift_library",
)

swift_library(
    name = "ErrorHandling",
    module_name = "ErrorHandling",
    srcs = glob([
        "Sources/**/*.swift",
    ]),
    visibility = ["//visibility:public"],
)

ios_framework(
    name = "ErrorHandling.iOS",
    deps = [
        ":ErrorHandling",
    ],
    bundle_id = "com.cocoatype.Barc.ErrorHandling",
    families = ["iphone", "ipad"],
    infoplists = ["//Shared:Info.plist"],
    minimum_os_version = MINIMUM_IOS_VERSION,
    visibility = ["//visibility:public"],
)

swift_library(
    name = "ErrorHandlingTests",
    testonly = True,
    srcs = glob([
        "Tests/Sources/**/*.swift",
    ]),
    deps = [
        ":ErrorHandling",
    ],
    visibility = ["//visibility:private"],
)

ios_unit_test(
    name = "Tests",
    minimum_os_version = MINIMUM_IOS_VERSION,
    deps = [
        ":ErrorHandlingTests",
    ],
    runner = "@rules_apple//apple/testing/default_runner:ios_xctestrun_random_runner",
    size = "small",
    visibility = ["//visibility:public"],
)
