load(
    "//:constants.bzl",
    "MINIMUM_IOS_VERSION",
)

load(
    "@rules_apple//apple:ios.bzl",
    "ios_framework",
    "ios_unit_test",
)

load(
    "@rules_swift//swift:swift.bzl",
    "swift_library",
)

swift_library(
    name = "Persistence",
    module_name = "Persistence",
    srcs = glob([
        "Sources/**/*.swift",
    ]),
    deps = [
        "//ErrorHandling",
    ],
    visibility = ["//visibility:public"],
)

ios_framework(
    name = "Persistence.iOS",
    deps = [
        ":Persistence",
    ],
    frameworks = [
        "//ErrorHandling:ErrorHandling.iOS",
    ],
    bundle_id = "com.cocoatype.Barc.Persistence",
    families = ["iphone", "ipad"],
    infoplists = ["//Shared:Info.plist"],
    minimum_os_version = MINIMUM_IOS_VERSION,
    visibility = ["//visibility:public"],
)

swift_library(
    name = "PersistenceTests",
    testonly = True,
    srcs = glob([
        "Tests/Sources/**/*.swift",
    ]),
    deps = [
        ":Persistence",
    ],
    visibility = ["//visibility:private"],
)

ios_unit_test(
    name = "Tests",
    minimum_os_version = MINIMUM_IOS_VERSION,
    deps = [
        ":PersistenceTests",
    ],
    runner = "@rules_apple//apple/testing/default_runner:ios_xctestrun_random_runner",
    size = "small",
    visibility = ["//visibility:public"],
)
