load(
    "//:constants.bzl",
    "MINIMUM_IOS_VERSION",
)

load(
    "@rules_swift//swift:swift.bzl",
    "swift_library",
)

load(
    "@rules_apple//apple:apple.bzl",
    "local_provisioning_profile",
)

load(
    "@rules_apple//apple:ios.bzl",
    "ios_application",
)

load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "xcode_provisioning_profile",
)

xcode_provisioning_profile(
    name = "xcode_profile",
    managed_by_xcode = True,
    provisioning_profile = ":provisioning_profile",
)

local_provisioning_profile(
    name = "provisioning_profile",
    profile_name = "iOS Team Provisioning Profile: *",
    team_id = "287EDDET2B",
)

ios_application(
    name = "Mobile",
    bundle_id = "com.cocoatype.Barc",
    families = ["iphone", "ipad"],
    infoplists = [":Info.plist"],
    minimum_os_version = MINIMUM_IOS_VERSION,
    deps = [
        ":MobileLibrary",
    ],
    frameworks = [
        "//BarcodeGenerator:BarcodeGenerator.iOS",
        "//Library:Library.iOS",
        "//ManualEntry:ManualEntry.iOS",
    ],
    provisioning_profile = ":xcode_profile",
    visibility = ["//visibility:public"],
)

swift_library(
    name = "MobileLibrary",
    srcs = glob([
        "Sources/**/*.swift",
    ]),
    data = [
        "Resources/Localizable.strings",
    ],
    deps = [
        "//BarcodeGenerator",
        "//Library",
        "//ManualEntry",
    ],
    visibility = ["//visibility:public"],
)

exports_files([
    "Resources/LaunchScreen.storyboard",
])
